--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 
 <html>
 	<head>
-		<title>royal jewels of europe </title>
+		<title>royal castles and palaces of europe </title>
 	</head>
 	<body>
-		<h1>the royal jewels of europe</h1>
-		<p> there are many royal families of europe. they have many incrediblt things. but the most precious and beautiful things they have are their priceless jewels. i will go into depth about the following royal families jewels.</p>
+		<h1>the royal castles and palaces of europe</h1>
+		<p> there are many royal families of europe. they have many incredible things. but the most stunning and grnd things they have are their grand castles and palaces. I will go into depth about the following royal families astounding estates.</p>
+		<img src="windsor.jpg" alt="windsor castle"
 		<ul>
-			<li> the british royal family</li>
-			<li> the danish royal family</li>
-			<li> the french royal family</li>
+			<li><a href="british.html">The British Royal Family</a></li>
+			<li><a href="Danish.html"> The Danish Royal Family</a></li>
+			<li><a href="French.html"> The French Royal Family</a></li>
 		</ul>
+		<br/>
+		
 	</body>
 </html>
