--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 	</head>
 	<body>
 		<h1>the royal castles and palaces of europe</h1>
-		<p> there are many royal families of europe. they have many incredible things. but the most stunning and grnd things they have are their grand castles and palaces. I will go into depth about the following royal families astounding estates.</p>
-		<img src="windsor.jpg" alt="windsor castle"
+		
+		
 		<ul>
 			<li><a href="british.html">The British Royal Family</a></li>
 			<li><a href="Danish.html"> The Danish Royal Family</a></li>
 			<li><a href="French.html"> The French Royal Family</a></li>
 		</ul>
+
 		<br/>
+		<img src="Mu7kgjAaxqTbUGtk974aRH.jpg" alt="versailles"/> <img src="image001.jpg" alt="danish palace"/> <img src="windsor_crop.jpg" alt="windsor"/>
 		
 	</body>
 </html>
