--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
 		<title>royal castles and palaces of europe </title>
 	</head>
 	<body>
-		<h1>the royal castles and palaces of europe</h1>
-		
-		
-		<ul>
-			<li><a href="british.html">The British Royal Family</a></li>
-			<li><a href="Danish.html"> The Danish Royal Family</a></li>
-			<li><a href="French.html"> The French Royal Family</a></li>
-		</ul>
+		<h1>The Royal Castles and Palaces of Europe</h1>
 
+		<p> Europe is known for its many royal families. Some of the best tourist sites in the countries re to the palaces, castles and estates. If you are looking for the best palaces and castles to go to, look no further. I have put together a great collection of castles and palaces to visit for your next trip to Europe. I have narrowed down my selections to Great Britian, France, and two lesser known royal families, Denmark and Portugal. I have been to all the palaces except the British ones, but don't fear, I have done an extensive amount of reasearch on them. I hope you enjoy my selections and use my suggestions fo your next trip to Europe!</p>
+
+		<img src="windsor_crop.jpg" alt="windsor castle"/>
+		<li><a href="british.html">The British Royal Family</a></li>
+		<img src="Mu7kgjAaxqTbUGtk974aRH.jpg" alt="french palace"/>
+		<li><a href="French.html"> The French Royal Family</a></li>
+		<img src="Frederiksborg-Slot.-Foto-Charlotte-Dahl.jpg" alt="danish palace"/>
+		<img src="44.jpg" alt="portugese palace"/>	
+		<li><a href="Danish.html"> The Lesser Known Royal Families</a></li>
+			
+		
 		<br/>
-		<img src="Mu7kgjAaxqTbUGtk974aRH.jpg" alt="versailles"/> <img src="image001.jpg" alt="danish palace"/> <img src="windsor_crop.jpg" alt="windsor"/>
 		
 	</body>
 </html>
