--- a/practiceEvelina-main 2/British.html
+++ b/practiceEvelina-main 2/British.html
@@ -16,6 +16,12 @@
 			<img src="courtyard-ward-apartments-Berkshire-Eng-Windsor-Castle.jpg" alt="courtyard,england"/>
 			<h2>The Grand Entrance</h2>
 			<img src="Windsor_castle_rear_entrance,_waiting_to_catch_a_glimplse_of_The_Queen.jpg" alt="entrence,england"/>
+		<h2> St. Georges Cathedral </h2>
+			<img src="st-georges-chapel2-640x360.jpg" alt= "chapel 1,england"/>
+			<img src="download copy.jpg" alt= "chapel 2,england"/> 
+		<h2> Waterloo Chamber</h2>
+		<img src="v0_master.jpg" alt"waterloo chamber"/>
+		
 		<br/>
 		<a href="index.html">back to home</a>
 	</body>
