--- a/practiceEvelina-main 2/Danish.html
+++ b/practiceEvelina-main 2/Danish.html
@@ -2,14 +2,20 @@
 
 <html>
 	<head>
-		<title>The Danish Royal Family </title>
+		<title>The Lesser Known Royal Families </title>
 	</head>
 	<body>
-		<h1>The Danish Royal Family</h1>
-		<p></p>
-		<ul>
-			
-		<br/>
+		<h1>The Lesser Known Royal Families </h1>
+		<p>unlike the other two royal families, these two royal family are much less known. even if they are not as well known, doesn't mean their castles and palaces are less esqusite, in fact they ar ejust a stunning as the other two palaces and castles I have mentioned.</p>
+		<h2/> The Portugese Royal FAmily</h2>
+		<p> theres a pretty good change you havn't heard of the portugese royal family. there are two main reasons for this, one portugal is a pretty small country, two the royal family is no longer in power. even with no royal family, their palces and castles are stunning. I have seen many of them, and can say from personal experience they ar eequisite and well worht your time.</p>
+		
+	<h2> pena Palace</h2>
+	<img src="Pena_National_Palace_-_Sintra_-_Palácio_Nacional_da_Pena_(15842491914)_(cropped).jpg" alt="pena palace"/>
+	<p>this palace is an incredible way to spend your day. it is 45 miinutes away from lisbon, so an easy a great way to spend a say in portugal. you don't want to miss this palace. not only is the palace itself beautiful, the views are just incredible. when I vivsted portugal It was by far one of my favorite palace I visited. 
+	</p>
+	
+	<br/>
 		<a href="index.html">back to home</a>
 	</body>
 </html>
