--- a/practiceEvelina-main 2/British.html
+++ b/practiceEvelina-main 2/British.html
@@ -20,7 +20,7 @@
 			<img src="st-georges-chapel2-640x360.jpg" alt= "chapel 1,england"/>
 			<img src="download copy.jpg" alt= "chapel 2,england"/> 
 		<h2> Waterloo Chamber</h2>
-		<img src="v0_master.jpg" alt"waterloo chamber"/>
+		<img src="v0_master.jpg" alt="waterloo chamber"/>
 		
 		<br/>
 		<a href="index.html">back to home</a>
