--- a/practiceEvelina-main 2/Danish.html
+++ b/practiceEvelina-main 2/Danish.html
@@ -14,7 +14,9 @@
 	<img src="Pena_National_Palace_-_Sintra_-_Palácio_Nacional_da_Pena_(15842491914)_(cropped).jpg" alt="pena palace"/>
 	<p>this palace is an incredible way to spend your day. it is 45 miinutes away from lisbon, so an easy a great way to spend a say in portugal. you don't want to miss this palace. not only is the palace itself beautiful, the views are just incredible. when I vivsted portugal It was by far one of my favorite palace I visited. 
 	</p>
-	
+	<h2> The View <h2/>
+		<img src="Screen Shot 2021-04-01 at 9.46.15 PM" alt= view/>
+		
 	<br/>
 		<a href="index.html">back to home</a>
 	</body>
