--- a/practiceEvelina-main 2/Danish.html
+++ b/practiceEvelina-main 2/Danish.html
@@ -11,12 +11,17 @@
 		<p> theres a pretty good change you havn't heard of the portugese royal family. there are two main reasons for this, one portugal is a pretty small country, two the royal family is no longer in power. even with no royal family, their palces and castles are stunning. I have seen many of them, and can say from personal experience they ar eequisite and well worht your time.</p>
 		
 	<h2> pena Palace</h2>
-	<img src="Pena_National_Palace_-_Sintra_-_Palácio_Nacional_da_Pena_(15842491914)_(cropped).jpg" alt="pena palace"/>
+	<img src="Pena_National_Palace_-_Sintra_-_Palácio_Nacional_da_Pena_(15842491914)_(cropped).jpg" alt="pena palace"/>
 	<p>this palace is an incredible way to spend your day. it is 45 miinutes away from lisbon, so an easy a great way to spend a say in portugal. you don't want to miss this palace. not only is the palace itself beautiful, the views are just incredible. when I vivsted portugal It was by far one of my favorite palace I visited. 
 	</p>
 	<h2> The View <h2/>
 		<img src="Screen Shot 2021-04-01 at 9.46.15 PM" alt= view/>
-		
+		<h2/> the entrance</h2>
+	<img src="" alt="entrence,portugal"/>
+	
+
+<h2> The Danish Royal Family<\h2>
+	<p> This is another lesser known royal family that is worth your knowing. Unlike Portugal they are still ruling Denmark. </p>
 	<br/>
 		<a href="index.html">back to home</a>
 	</body>
