--- a/practiceEvelina-main 2/Danish.html
+++ b/practiceEvelina-main 2/Danish.html
@@ -23,7 +23,7 @@
 <h2> The Danish Royal Family<\h2>
 	<p> This is another lesser known royal family that is worth your knowing. Unlike Portugal they are still ruling Denmark. even is you don't know thier family you shlould defenitally know the palaces they own. don't mistake their castles to be less stunnign because they are samller. you don't want to miss seeing these beautiful estates. </p>
 	<h2> Frederiksborg Castle</h2>
-	
+	<p> This is a beautiful palace that is well worth your time. It's rooms and landscape are just astounding.</p>
 	<br/>
 		<a href="index.html">back to home</a>
 	</body>
