--- a/practiceEvelina-main 2/index.html
+++ b/practiceEvelina-main 2/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>royal castles and palaces of europe </title>
+		<link href="style.css" type ="text/css" rel="stylesheet"/>
 	</head>
 	<body>
 		<h1>The Royal Castles and Palaces of Europe</h1>
