--- a/practiceEvelina-main 2/French.html
+++ b/practiceEvelina-main 2/French.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>The French Royal Family </title>
+		<link href="style.css" type ="text/css" rel="stylesheet"/>	
 	</head>
 	<body>
 		<h1>The French Royal Family</h1>
