--- a/practiceEvelina-main 2/Danish.html
+++ b/practiceEvelina-main 2/Danish.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>The Lesser Known Royal Families </title>
+		<link href="style.css" type ="text/css" rel="stylesheet"/>	
 	</head>
 	<body>
 		<h1>The Lesser Known Royal Families </h1>
