--- a/practiceEvelina-main 2/British.html
+++ b/practiceEvelina-main 2/British.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>The British Royal Family </title>
+		<link href="style.css" type ="text/css" rel="stylesheet"/>	
 	</head>
 	<body>
 		<h1>The British Royal Family</h1>
