--- a/practiceEvelina-main 2/British.html
+++ b/practiceEvelina-main 2/British.html
@@ -21,7 +21,7 @@
 			<img src="stgeorges.jpg" alt= "chapel 1,england"/>
 			<img src="cathedral.jpg" alt= "chapel 2,england"/> 
 		<h2> Waterloo Chamber</h2>
-		<img src="v0_master.jpg" alt="waterloo chamber"/>
+		<img src="v0master.jpg" alt="waterloo chamber"/>
 		
 		<br/>
 		<a href="index.html">back to home</a>
