--- a/practiceEvelina-main/practiceEvelina-main 2/Danish.html
+++ b/practiceEvelina-main/practiceEvelina-main 2/Danish.html
@@ -8,8 +8,10 @@
 	<body>
 		<h1>The Lesser Known Royal Families </h1>
 		<p>unlike the other two royal families, these two royal family are much less known. even if they are not as well known, doesn't mean their castles and palaces are less esqusite, in fact they ar ejust a stunning as the other two palaces and castles I have mentioned.</p>
-		<h2> The Portugese Royal FAmily</h2>
-		<p> theres a pretty good change you havn't heard of the portugese royal family. there are two main reasons for this, one portugal is a pretty small country, two the royal family is no longer in power. even with no royal family, their palces and castles are stunning. I have seen many of them, and can say from personal experience they ar eequisite and well worht your time.</p>
+
+		<h2> The Portugese Royal Family</h2>
+		
+		<p> theres a pretty good chance you havn't heard of the portugese royal family. there are two main reasons for this, one portugal is a pretty small country, two the royal family is no longer in power. even with no royal family, their palces and castles are stunning. I have seen many of them, and can say from personal experience they ar equisite and well worth your time.</p>
 		
 	<h2> pena Palace</h2>
 	<img src="Panoramic-view-of-the-Pena-Palace.Sintra-Portugal-Image-min.jpg" alt="pena palace"/>
@@ -22,9 +24,23 @@
 	
 
 <h2> The Danish Royal Family </h2>
-	<p> This is another lesser known royal family that is worth your knowing. Unlike Portugal they are still ruling Denmark. even is you don't know thier family you shlould defenitally know the palaces they own. don't mistake their castles to be less stunnign because they are samller. you don't want to miss seeing these beautiful estates. </p>
+	<p> This is another lesser known royal family that is worth your knowing. Unlike Portugal they are still ruling Denmark. they are also seen by many as the perfect royal family. so even is you don't know thier family you should defanitaly know the palaces they own. don't mistake their castles to be less stunnig because they are samller. you won't undertestimate their power after you visit these castles. so what are you waiting for? </p>
+
 	<h2> Frederiksborg Castle</h2>
-	<p> This is a beautiful palace that is well worth your time. It's rooms and landscape are just astounding.</p>
+	<img src="North-Zealand-Frederiksborg-Castle.webp" alt="danishcastle"/>
+	<p> This is a beautiful palace that is well worth your time. It's rooms and landscape are just astounding. the detail that is put into each floor, each crown molding, will make you really appreciate the rooms a lot more. you will be in awe of just the vast grandness of this palace.</p>
+
+	<h2> the  grand entrance and courtyard <h2/> 
+
+		<img src="Frederiksborg-Castle-Entrance.webp" alt= "entrence of danish castle"/>
+		 <h2>The throne room</h2>
+
+		 <img src="Frederiksborg-Palace-86-1024x683.jpg" alt="danishthroneroom"/>
+		 <img src="B038_Thronsaal_Schloss_Frederiksborg.jpg" alt="throneroom2"/>
+
+		 <h2>the gardens</h2>
+		 <img src="236735_Frederiksborg_Castle_-_credits_-_Det_Nationalhistoriske_Museum_-_VisitNordsjaelland-edited.jpg" alt= "gardens1"/>
+		 <img src="PANA7043-480x600.jpg" alt="gardens2"/>
 
 
 	<br/>
