--- a/practiceEvelina-main/practiceEvelina-main 2/British.html
+++ b/practiceEvelina-main/practiceEvelina-main 2/British.html
@@ -18,10 +18,10 @@
 			<h2>The Grand Entrance</h2>
 			<img src="Windsor_castle_rear_entrance,_waiting_to_catch_a_glimplse_of_The_Queen.jpg" alt="entrence,england"/>
 		<h2> St. Georges Cathedral </h2>
-			<img src="stgeorges.jpg" alt= "chapel 1,england"/>
-			<img src="cathedral.jpg" alt= "chapel 2,england"/> 
+			<img src="gettyimages-882527936-1-1512773231.jpg" alt= "chapel 1,england"/>
+			<img src="stgeorges.jpg" alt= "chapel 2,england"/> 
 		<h2> Waterloo Chamber</h2>
-		<img src="v0master.jpg" alt="waterloo chamber"/>
+		<img src="waterloo.jpg" alt="waterloo chamber"/>
 		
 		<br/>
 		<a href="index.html">back to home</a>
